--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,37 +1,117 @@
+
+# Apex Legends configuration file
+
+
+# Movement
+bind_US_standard "w" "+forward" 0
+bind_US_standard "a" "+moveleft" 0
+bind_US_standard "s" "+backward" 0
+bind_US_standard "d" "+moveright" 0
+
+bind_US_standard "SPACE" "+jump" 0
+bind_US_standard "LSHIFT" "+speed" 0
+bind_held_US_standard "g" "+strafe" 0
+
+# Mouse
+m_acceleration "0"
+bind_US_standard "MOUSE2" "+toggle_zoom" 0
+bind_US_standard "MOUSE3" "+ping" 0
+bind_US_standard "MOUSE4" "+offhand1" 1
+bind_US_standard "MOUSE5" "+offhand4" 1
+bind_US_standard "MWHEELUP" "+forward" 1
+bind_US_standard "MWHEELDOWN" "+jump" 1
+
+# Actions - Combat
+bind_US_standard "MOUSE1" "+attack" 0
+bind_US_standard "v" "+melee" 0
+
+# Actions - Essentials
+bind_US_standard "e" "+use; +use_long" 0
+bind_US_standard "q" "+offhand1" 0
+bind_US_standard "z" "+offhand4" 0
+bind_US_standard "x" "+use_alt" 0
+
+# Actions - Switching weapon
 bind_US_standard "1" "weaponSelectPrimary0" 0
 bind_US_standard "2" "weaponSelectPrimary1" 0
 bind_US_standard "3" "weaponSelectPrimary2" 0
 bind_US_standard "4" "+scriptCommand4" 0
-bind_held_US_standard "4" "+scriptCommand2" 0
+bind_US_standard "g" "weaponSelectOrdnance" 0
+
+# Actions - Weapon usage
+bind_US_standard "r" "+reload" 0
+bind_US_standard "n" "weapon_inspect" 0
+
+# HUD/Spectate
+bind_US_standard "TAB" "toggle_inventory" 0
+bind_US_standard "m" "toggle_map" 0
+bind_US_standard "i" "toggle_inventory" 1
+bind_US_standard "j" "in_spec_teamplayer1" 0
+bind_US_standard "k" "in_spec_teamplayer2" 0
+bind_US_standard "l" "in_spec_teamplayer3" 0
+
+# Actions - Healing
 bind_US_standard "5" "use_consumable HEALTH_SMALL" 0
 bind_US_standard "6" "use_consumable HEALTH_LARGE" 0
 bind_US_standard "7" "use_consumable SHIELD_SMALL" 0
 bind_US_standard "8" "use_consumable SHIELD_LARGE" 0
 bind_US_standard "9" "use_consumable PHOENIX_KIT" 0
-bind_US_standard "a" "+moveleft" 0
-bind_US_standard "b" "+scriptCommand3" 0
-bind_US_standard "c" "+toggle_duck" 0
-bind_US_standard "d" "+moveright" 0
-bind_US_standard "e" "+use; +use_long" 0
+
+# Communication
 bind_US_standard "f" "ping_specific_type ENEMY" 0
-bind_US_standard "g" "weaponSelectOrdnance" 0
-bind_held_US_standard "g" "+strafe" 0
-bind_US_standard "h" "+scriptCommand5" 0
-bind_US_standard "i" "toggle_inventory" 1
-bind_US_standard "j" "in_spec_teamplayer1" 0
-bind_US_standard "k" "in_spec_teamplayer2" 0
-bind_US_standard "l" "in_spec_teamplayer3" 0
-bind_US_standard "m" "toggle_map" 0
-bind_US_standard "n" "weapon_inspect" 0
-bind_US_standard "q" "+offhand1" 0
-bind_US_standard "r" "+reload" 0
-bind_US_standard "s" "+backward" 0
 bind_US_standard "t" "+pushtotalk" 0
+bind_US_standard "F1" "chat_wheel" 0
+bind_US_standard "ENTER" "say_team" 0
+
+# Movement
+bind_US_standard "LCTRL" "+duck" 0
+bind_US_standard "c" "+toggle_duck" 0
+sound_volume_voice "1"
+
+bind_held_US_standard "4" "+scriptCommand2" 0
+bind_US_standard "b" "+scriptCommand3" 0
+
+
+# Settings
+bind_US_standard "`" "toggleconsole" 0
+bind_US_standard "ESCAPE" "ingamemenu_activate" 0
+sv_voiceenable "1"
+
+# Extra
+name "sus"
+
+
+# NO IDEA
+
+bind_US_standard "h" "+scriptCommand5" 0
 bind_US_standard "u" "+scriptCommand6" 1
-bind_US_standard "v" "+melee" 0
-bind_US_standard "w" "+forward" 0
-bind_US_standard "x" "+use_alt" 0
-bind_US_standard "z" "+offhand4" 0
+
+bind_US_standard "F2" "+scriptCommand7" 0
+bind_US_standard "F8" "miles_insert_bug_marker" 0
+bind_US_standard "F10" "screenshotDevNet_noRPROF" 0
+bind_US_standard "F12" "screenshotDevNet" 0
+
+mouse_sensitivity "5"
+mouse_use_per_scope_sensitivity_scalars "0"
+mouse_zoomed_sensitivity_scalar_0 "1.0"
+mouse_zoomed_sensitivity_scalar_1 "1.0"
+mouse_zoomed_sensitivity_scalar_2 "1.0"
+mouse_zoomed_sensitivity_scalar_3 "1.0"
+mouse_zoomed_sensitivity_scalar_4 "1.0"
+mouse_zoomed_sensitivity_scalar_5 "1.0"
+mouse_zoomed_sensitivity_scalar_6 "1.0"
+mouse_zoomed_sensitivity_scalar_7 "1.0"
+
+TalkIsStream "0"
+voice_forcemicrecord "1"
+voice_input_device ""
+voice_mixer_boost "0"
+voice_mixer_mute "0"
+voice_mixer_volume "1.0"
+voice_modenable "1"
+voice_scale "1"
+voice_vox "1"
+
 bind_US_standard "KP_END" "in_spec_kill_leader" 0
 bind_US_standard "KP_DOWNARROW" "in_spec_prev" 0
 bind_US_standard "KP_PGDN" "in_spec_closest_enemy" 0
@@ -48,27 +128,7 @@ bind_US_standard "KP_PLUS" "in_spec_chasecam_zoom_in" 0
 bind_US_standard "KP_DEL" "in_spec_toggle_ui" 0
 bind_US_standard "[[" "in_spec_toggle_freecam" 0
 bind_US_standard "]" "in_spec_toggle_chasecam_lock" 0
-bind_US_standard "`" "toggleconsole" 0
-bind_US_standard "=" "toggle_observer_ring_survey" 0
-bind_US_standard "ENTER" "say_team" 0
-bind_US_standard "SPACE" "+jump" 0
-bind_US_standard "TAB" "toggle_inventory" 0
-bind_US_standard "ESCAPE" "ingamemenu_activate" 0
-bind_US_standard "LSHIFT" "+speed" 0
-bind_US_standard "LALT" "+scriptCommand6" 0
-bind_US_standard "LCTRL" "+duck" 0
-bind_US_standard "F1" "chat_wheel" 0
-bind_US_standard "F2" "+scriptCommand7" 0
-bind_US_standard "F8" "miles_insert_bug_marker" 0
-bind_US_standard "F10" "screenshotDevNet_noRPROF" 0
-bind_US_standard "F12" "screenshotDevNet" 0
-bind_US_standard "MOUSE1" "+attack" 0
-bind_US_standard "MOUSE2" "+toggle_zoom" 0
-bind_US_standard "MOUSE3" "+ping" 0
-bind_US_standard "MOUSE4" "+offhand1" 1
-bind_US_standard "MOUSE5" "+offhand4" 1
-bind_US_standard "MWHEELUP" "+forward" 1
-bind_US_standard "MWHEELDOWN" "+jump" 1
+
 bind_US_standard "A_BUTTON" "+ability 0" 0
 bind_held_US_standard "A_BUTTON" "+ability_held 0" 0
 bind_US_standard "B_BUTTON" "+ability 1" 0
@@ -99,6 +159,17 @@ bind_US_standard "L_TRIGGER" "+ability 4" 0
 bind_held_US_standard "L_TRIGGER" "+ability_held 4" 0
 bind_US_standard "R_TRIGGER" "+ability 5" 0
 bind_held_US_standard "R_TRIGGER" "+ability_held 5" 0
+
+
+speex_quiet_threshold "1300"
+sv_specaccelerate "1000.0"
+sv_specnoclip "1"
+sv_specspeed "5.0"
+
+
+bind_US_standard "=" "toggle_observer_ring_survey" 0
+bind_US_standard "LALT" "+scriptCommand6" 0
+
 cc_linger_time "1.0"
 cc_predisplay_time "0.25"
 chroma_enable "1"
@@ -107,31 +178,6 @@ gfx_nvnUseLowLatency "1"
 gfx_nvnUseLowLatencyBoost "1"
 lookspring "0"
 lookstrafe "0"
-m_acceleration "0"
-mouse_sensitivity "5"
-mouse_use_per_scope_sensitivity_scalars "0"
-mouse_zoomed_sensitivity_scalar_0 "1.0"
-mouse_zoomed_sensitivity_scalar_1 "1.0"
-mouse_zoomed_sensitivity_scalar_2 "1.0"
-mouse_zoomed_sensitivity_scalar_3 "1.0"
-mouse_zoomed_sensitivity_scalar_4 "1.0"
-mouse_zoomed_sensitivity_scalar_5 "1.0"
-mouse_zoomed_sensitivity_scalar_6 "1.0"
-mouse_zoomed_sensitivity_scalar_7 "1.0"
-name "sus"
+
+
 sound_num_speakers "2"
-sound_volume_voice "1"
-speex_quiet_threshold "1300"
-sv_specaccelerate "1000.0"
-sv_specnoclip "1"
-sv_specspeed "5.0"
-sv_voiceenable "1"
-TalkIsStream "0"
-voice_forcemicrecord "1"
-voice_input_device ""
-voice_mixer_boost "0"
-voice_mixer_mute "0"
-voice_mixer_volume "1.0"
-voice_modenable "1"
-voice_scale "1"
-voice_vox "1"
